# logicdev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  install.sh  logicdev.conf.json  main.conf.json  main.conf.json.example
legacy/: build.sh
lib/shiki/: shiki
scripts/: build.py  install.py
src/: .env  checkFileExistence.cpp  log.cpp  main.cpp  math.cpp
src/Commands/: Command.cpp  Command.hpp  register_commands.cpp  register_commands.hpp
src/Commands/Dev/: register.cpp  register.hpp
src/Commands/Fun/: 8ball.cpp  8ball.hpp
src/Commands/Test/: ping.cpp  ping.hpp
src/headers/: 8ball.h  Command.h  all_commands.h  checkFileExistence.h  crow_all.h  definitions.h  log.h  ping.h  read_env.hpp  register.h  register_commands.h
src/sources/: log.cpp
